[package]
name = "solana-tpu-client-test"
description = "Solana TPU Client Test"
documentation = "https://docs.rs/solana-tpu-client-test"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1"
bs58 = "0.5"
clap = { version = "3", features = ["derive"] }
log = "0.4"
solana-account-decoder = { path = "../solana/account-decoder" }
solana-clap-v3-utils = { path = "../solana/clap-v3-utils" }
solana-cli-config = { path = "../solana/cli-config" }
solana-client = { path = "../solana/client" }
solana-connection-cache = { path = "../solana/connection-cache" }
solana-logger = { path = "../solana/logger" }
solana-program = { path = "../solana/sdk/program" }
solana-pubsub-client = { path = "../solana/pubsub-client" }
solana-remote-wallet = { path = "../solana/remote-wallet" }
solana-rpc = { path = "../solana/rpc" }
solana-rpc-client = { path = "../solana/rpc-client" }
solana-rpc-client-api = { path = "../solana/rpc-client-api" }
solana-sdk = { path = "../solana/sdk" }
solana-streamer = { path = "../solana/streamer" }
solana-tpu-client = { path = "../solana/tpu-client" }
solana-zk-token-sdk = { path = "../solana/zk-token-sdk" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-test-validator = { path = "../solana/test-validator" }

[patch.crates-io]
# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `spl-token` depends on
# `solana-program`.  And we explicitly specify `solana-program` above as a local
# path dependency:
#
#     solana-program = { path = "../../sdk/program", version = "=1.16.0" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `solana-program` and `solana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.
solana-program = { path = "../solana/sdk/program" }
solana-zk-token-sdk = { path = "../solana/zk-token-sdk" }
